# egp-types

./: .pylintrc  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
egp_types/: GGC.py  _GC.py  __init__.py  _genetic_code.py  aGC.py  app_gcs.py  common.py  connections.py  conversions.py  dGC.py  eGC.py  egp_typing.py  end_point.py  ep_type.py  gGC.py  gc_graph.py  gc_type_tools.py  genetic_code.py  genetic_code_cache.py  gpc_gcs.py  graph.py  graph_validators.py  interface.py  internal_graph.py  mGC.py  md_table.py  mermaid_charts.py  reference.py  rows.py  store.py  terminal_genetic_code.py  typing.py  xGC.py  xgc_validator.py
egp_types/data/: ep_types.json
egp_types/docs/: gc_logical_structure.md  gc_type_table.md
egp_types/formats/: GGC_entry_format.json  LGC_entry_format.json  LGC_json_dump_entry_format.json  LGC_json_entry_format.json  LGC_json_load_entry_format.json  gGC_entry_format.json  gms_entry_format.json  internal_graph_format.json
egp_types/utils/: base_validator.py
scripts/: interface_hashes.py
tests/: test_code_quality.py  test_ep_type.py  test_gc_graph.py  test_genetic_code.py  test_genetic_code_cache.py  test_graph.py  test_interface.py  test_internal_graph.py  test_reference.py  test_xGC.py
tests/data/: random_internal_graph.json  test_gc_graph_results.json
